--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
-    "react-native-splash-screen": "^3.3.0"
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^15.3.0",
+    "react-native-svg-transformer": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
