--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -25,7 +26,10 @@
     "react-native": "0.74.2",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-localization": "^2.3.2",
+    "react-native-rate": "^1.2.12",
     "react-native-reanimated": "^3.12.0",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-splash-screen": "^3.3.0",
