--- a/ios/Podfile
+++ b/ios/Podfile
@@ -11,11 +11,19 @@ prepare_react_native_project!
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
-  use_frameworks! :linkage => linkage.to_sym
+  # use_frameworks! :linkage => linkage.to_sym
 end
+
 
 target 'EarnExtraMoney' do
   config = use_native_modules!
+  use_modular_headers!
+  
+  pod 'Firebase', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'FirebaseCoreInternal', :modular_headers => true
+  pod 'Firebase/Messaging', :modular_headers => true
 
   use_react_native!(
     :path => config[:reactNativePath],
