--- a/package.json
+++ b/package.json
@@ -15,16 +15,24 @@
     "linkingFonts": "npx react-native-asset",
     "lint": "eslint .",
     "start": "npx react-native start --reset-cache",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/analytics": "^20.1.0",
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/crashlytics": "^20.1.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.73.6",
+    "react-native-admob-native-ads": "^0.6.6",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-google-mobile-ads": "^13.6.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localization": "^2.3.2",
     "react-native-rate": "^1.2.12",
@@ -35,6 +43,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.4.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-webview": "^13.10.4"
   },
   "devDependencies": {
