--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@mobeuv/react-native-check-ip": "^1.3.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/analytics": "^20.1.0",
     "@react-native-firebase/app": "^20.1.0",
@@ -26,11 +27,13 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.5",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-admob-native-ads": "^0.6.6",
+    "react-native-device-info": "^11.1.0",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-google-mobile-ads": "^13.6.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -44,7 +47,8 @@
     "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-webview": "^13.10.4"
+    "react-native-webview": "^13.10.4",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
