--- a/ios/EarnExtraMoney/Info.plist
+++ b/ios/EarnExtraMoney/Info.plist
@@ -20,16 +20,37 @@
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb1214818839417159</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>FacebookAppID</key>
+	<string>1214818839417159</string>
+	<key>FacebookAppSecret</key>
+	<string>b5a0f23f2a13a62057ca9d61e314b6e6</string>
+	<key>FacebookClientToken</key>
+	<string>b9ca644f042aa0611fd7d6d392e9a808</string>
+	<key>FacebookDisplayName</key>
+	<string>Earn Extra Money</string>
 	<key>GADApplicationIdentifier</key>
 	<string>ca-app-pub-3940256099942544~1458002511</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>mailto</string>
-	</array>  
+		<string>fbapi</string>
+		<string>fb-messenger-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
