--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native": "0.73.6",
     "react-native-admob-native-ads": "^0.6.6",
     "react-native-device-info": "^11.1.0",
+    "react-native-fbsdk-next": "^13.0.0",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-google-mobile-ads": "^13.6.0",
     "react-native-linear-gradient": "^2.8.3",
