--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/crashlytics": "^20.1.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.5",
@@ -35,12 +36,12 @@
     "react-native-admob-native-ads": "^0.6.6",
     "react-native-device-info": "^11.1.0",
     "react-native-fbsdk-next": "^13.0.0",
-    "react-native-gesture-handler": "^2.16.2",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-google-mobile-ads": "^13.6.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localization": "^2.3.2",
     "react-native-rate": "^1.2.12",
-    "react-native-reanimated": "^3.12.0",
+    "react-native-reanimated": "^3.14.0",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
