--- a/ios/EarnExtraMoney/Info.plist
+++ b/ios/EarnExtraMoney/Info.plist
@@ -48,6 +48,11 @@
 		<string>fb-messenger-api</string>
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
+		<string>whatsapp</string>
+		<string>instagram</string>
+		<string>instagram-stories</string>
+		<string>fb</string>
+		<string>facebook-stories</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
