--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-admob-native-ads": "^0.6.6",
+    "react-native-date-picker": "^5.0.4",
     "react-native-device-info": "^11.1.0",
     "react-native-fbsdk-next": "^13.0.0",
     "react-native-gesture-handler": "^2.17.1",
@@ -45,6 +46,7 @@
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
+    "react-native-share": "^10.2.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.4.0",
