--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.4.0",
+    "react-native-tracking-transparency": "^0.1.2",
     "react-native-vector-icons": "^10.1.0",
     "react-native-webview": "^13.10.4",
     "react-redux": "^9.1.2"
